ui/bo.css
body {
  margin: 0;
  padding: 0;
  color: #000;
  background-color: #fff;
  /* 1em = 10px */
  font-size: 62.5%;
  font-family: "Arial", "DejaVu Sans", sans-serif;
}

a img { border: 0; }

select, input, button {
  color: #000;
  background-color: #fff;
  font-size: 1.0em;
}

textarea {
  color: #000;
  background-color: #fff;
  font-size: 1.2em;
}


input {
  background-position: left center;
  background-repeat: no-repeat;
}

.clear {
  clear: both;
}


/**************************************************************************
 * itools.web.BaseForm
 *************************************************************************/

.field-is-required {
  font-style: italic;
}

.field-is-missing {
  color: #ff0000;
}


/**************************************************************************
 * Buttons
 *************************************************************************/
.button-ok {
  background-image: url(icons/16x16/ok.png);
  padding-left: 16px;
}

.button-cancel {
  background-image: url(icons/16x16/cancel.png);
  padding-left: 16px;
}

.button-search {
  background-image: url(icons/16x16/search.png);
  padding-left: 16px;
}

.button-calendar {
  background-image: url(icons/16x16/calendar.png);
  padding-left: 16px;
}

.button-upload {
  background-image: url(icons/16x16/upload.png);
  padding-left: 16px;
}

.button-external {
  background-image: url(icons/16x16/external.png);
  padding-left: 16px;
}

.button-rename {
  background-image: url(icons/16x16/rename.png);
  padding-left: 16px;
}

.button-delete {
  background-image: url(icons/16x16/delete.png);
  padding-left: 16px;
}

.button-copy {
  background-image: url(icons/16x16/copy.png);
  padding-left: 16px;
}

.button-cut {
  background-image: url(icons/16x16/cut.png);
  padding-left: 16px;
}

.button-paste {
  background-image: url(icons/16x16/paste.png);
  padding-left: 16px;
}

.button-translate {
  background-image: url(icons/16x16/languages.png);
  padding-left: 16px;
}

.button-compare {
  background-image: url(icons/16x16/compare.png);
  padding-left: 16px;
}

.button-add {
  background-image: url(icons/16x16/add.png);
  padding-left: 16px;
}

.button-select-all {
  background-image: url(icons/16x16/select_all.png);
  padding-left: 16px;
}

.button-select-none {
  background-image: url(icons/16x16/select_none.png);
  padding-left: 16px;
}

.button-publish {
  background-image: url(icons/16x16/public.png);
  padding-left: 16px;
}


/**************************************************************************
 * ui/aruni/location.xml.en
 *************************************************************************/

#location {
  margin: 0px 10px 0px 0px;
  padding: 0px 0px 4px 8px;
  width: 99%;
}

#tabs {
  padding: 2px 4px 2px 0px;
  float: right;
  font-size: 1.1em;
}

#tabs a {
  text-decoration: none;
  white-space: nowrap;
}

#tabs .menu a {
  padding: 2px 4px 2px 4px;
}

#tabs .menu a:hover {
  background-color: #3465a4;
  color: #ffffff;
}

#tabs .active a {
  font-weight: bold;
}


/**************************************************************************
 * ui/aruni/location.xml.en
 * ui/html/addlink.xml.en
 * ui/html/addimage.xml.en
 *************************************************************************/

#breadcrumbs {
  float: left;
  font-size: 1.1em;
  margin: 2px 0px 2px 0px;
}

#breadcrumbs span {
  color: #888a85;
}

#breadcrumbs a {
  text-decoration: none;
  padding: 2px 4px 2px 4px;
}

#breadcrumbs a:hover {
  background-color: #3465a4;
  color: #ffffff;
}


/**************************************************************************
 * ui/aruni/message.xml.en
 * ui/html/addlink.xml.en
 * ui/html/addimage.xml.en
 *************************************************************************/

#message * {
  margin: 3px;
  border-width: 2px;
  border-style: solid;
  padding: 3px 0 3px 20px;
  background-position: left center;
  background-repeat: no-repeat;
}

#message .info {
  border-color: #e7db52;
  background-color: #ffffe7;
  background-image: url(icons/16x16/message.png);
}

#message .error {
 border-color: #e75252;
 background-color: #ffe7e7;
 background-image: url(icons/16x16/error.png);
}


/**************************************************************************
 * ui/generic/menu.xml.en
 *************************************************************************/

.context-menu {
  font-size: 0.8em;
  padding-left: 8px;
}

.context-menu a,
.context-menu a:link,
.context-menu a:visited,
.context-menu a:hover,
.context-menu a:active {
  text-decoration: none;
  color: #3465a4;
}

.context-menu label {
  display: block;
  width: 205px;
  margin: 3px;
  padding: 3px 6px;
  color: #fff;
  background-color: #c17d11;
}

.context-menu ul {
  margin: 3px 6px 10px 3px;
  list-style: none;
  padding: 3px;
}

.context-menu li {
  margin: 3px;
  padding: 0;
  background-repeat: no-repeat;
  background-position: top left;
  line-height: 1.4em;
  list-style: none;
  overflow: hidden;
  line-height: 1.4em;
  border-bottom: 1px solid #d3d7cf;
}


/**************************************************************************
 * ui/generic/icons_view.xml.en
 * ui/user/profile.xml.en
 *************************************************************************/

table.new-resource-thumb {
  float: left;
  margin-bottom: 10px;
  width: 18em;
}

/**************************************************************************
 * ui/generic/browse_table.xml.en
 * ui/website/edit_languages.xml.en
 * tracker/ui/view_tracker.xml.en
 *************************************************************************/


#browse-list thead th {
  text-align: left;
  background-color: #d3d7cf;
  padding: 0 5px;
  white-space: nowrap;
}

#browse-list thead th.checkbox {
  padding: 6px 3px;
}

#browse-list thead th.checkbox input {
  background-color: #d3d7cf;
}

#browse-list tbody td {
  padding: 3px;
  vertical-align: top;
}


/**************************************************************************
 * ui/generic/browse_table.xml.en
 *************************************************************************/
th a.sort{
  float: left;
  width: 9px;
  height: 9px;
}

th a.sort-up {
  background: transparent url(/ui/aruni/images/sort_up.png) no-repeat;
}

th a.sort-down {
  background: transparent url(/ui/aruni/images/sort_down.png) no-repeat;
}

th a.sort-up-active {
  background: transparent url(/ui/aruni/images/sort_up2.png) no-repeat;
}

th a.sort-down-active {
  background: transparent url(/ui/aruni/images/sort_down2.png) no-repeat;
}

th a.sort-none {
  background: transparent url(icons/16x16/none.png) right top no-repeat;
  padding-right: 20px;
  text-decoration: none;
}


/**************************************************************************
 * folder_views.Folder_BrowseContent
 *************************************************************************/

.workflow { text-decoration: none; }


/**************************************************************************
 * ui/WorkflowAware_state.xml.en
 *************************************************************************/

.wf-private { color: #c00; }
.wf-pending { color: #f57900; }
.wf-public { color: #4e9a06; }


/**************************************************************************
 * ui/website/search_table.xml.en
 *************************************************************************/

.results li {
  margin: 3px 3px 6px;
}

.result-url, .result-type, .result-size {
  font-size: 0.9em;
}

.result-url {
  color: #008000;
}


/**************************************************************************
 * ui/html/addlink.xml.en
 * ui/html/addimage.xml.en
 *************************************************************************/

#maintitle h1 {
  margin: 0;
  padding: 9px 0 0 0;
}


/**************************************************************************
 * ui/html/addlink.xml.en
 * ui/html/addimage.xml.en
 *************************************************************************/

dl.thumb {
  float: left;
  width: 8em;
  height: 8em;
  margin: 0;
  padding: 5px;
  text-align: center;
}

dl.thumb dt {
  margin: 0;
  padding: 0;
  font-weight: bold;
}

dl.thumb dd {
  margin: 0;
  padding: 0;
}


/**************************************************************************
 * Defined by resource_views.DBResource_Edit
 * Used by views.build_menu
 *************************************************************************/

.nav-active {
  font-weight: bold;
}


/**************************************************************************
 * Defined for Javascript-based tabs (splitting a view in panels)
 *************************************************************************/

p.tabme {
  border-bottom: 1px solid #3465A4;
  padding: 0.5em 0;
}
p.tabme a {
  text-decoration: none;
  padding: 0.5em 1em;
}
p.tabme a.selected {
  color: #fff;
  background: #3465A4;
}

/**************************************************************************
 * Versionning views
 *************************************************************************/

#differ span, #differ div {
  font-family: monospace;
  font-size: 1em;
  white-space: pre;
}

#differ .rem {
  color: red;
}

#differ .add {
  color: green;
}

#differ div {
  background-color: #EDECE6;
  border-color: #D9D8D1;
  border-style: solid;
  border-width: 1px 0;
  font-weight: bold;
  margin: 15px 0 4px 0;
  padding: 4px 0 2px;
}


/**************************************************************************
 * NOT YET CLASSIFIED
 *************************************************************************/

.number { text-align: right; }


tr.odd th, tr.odd td,
tr.odd td input {
  background-color: #eeeeec;
}

